<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <TextView
        android:id="@+id/homeHeader"
        style="@style/HeadlineTextAppearance"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:text="@string/public_holiday"
        android:textSize="24sp"
        android:layout_gravity="center"
        android:layout_marginTop="24dp"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintEnd_toEndOf="@id/guidelineEnd"
        app:layout_constraintStart_toStartOf="@id/guidelineStart"/>

    <include
        android:id="@+id/selectCountry"
        layout="@layout/item_option"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginEnd="8dp"
        android:layout_marginTop="16dp"
        app:layout_constraintEnd_toStartOf="@id/selectYear"
        app:layout_constraintTop_toBottomOf="@+id/homeHeader"
        app:layout_constraintStart_toStartOf="@id/guidelineStart" />

    <include
        android:id="@+id/selectYear"
        layout="@layout/item_option"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginTop="16dp"
        app:layout_constraintEnd_toEndOf="@id/guidelineEnd"
        app:layout_constraintTop_toBottomOf="@+id/homeHeader"
        app:layout_constraintStart_toEndOf="@id/selectCountry" />

    <TextView
        android:id="@+id/holidaysHeader"
        style="@style/MainTextAppearance"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:text="@string/holidays"
        android:textSize="20sp"
        android:layout_gravity="center"
        android:layout_marginTop="24dp"
        app:layout_constraintEnd_toEndOf="@id/guidelineEnd"
        app:layout_constraintTop_toBottomOf="@id/selectCountry"
        app:layout_constraintStart_toStartOf="@id/guidelineStart"/>

    <com.google.android.material.button.MaterialButton
        android:id="@+id/longWeekendButton"
        style="@style/TextButtonAppearance"
        android:layout_width="wrap_content"
        android:layout_height="48dp"
        android:text="@string/view_long_weekends"
        android:enabled="true"
        android:layout_marginTop="16dp"
        android:layout_marginEnd="12dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@id/selectCountry" />

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/searchCountryHolidayInput"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:letterSpacing="0.07"
        android:layout_marginTop="8dp"
        app:hintTextAppearance="?attr/textAppearanceCaption"
        app:hintEnabled="false"
        app:layout_constraintEnd_toEndOf="@id/guidelineEnd"
        app:layout_constraintTop_toBottomOf="@id/longWeekendButton"
        app:layout_constraintStart_toStartOf="@id/guidelineStart" >

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/searchCountryHolidayInputValue"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="textEmailAddress"
            android:letterSpacing="0.07"
            android:singleLine="true"
            android:padding="12dp"
            android:hint="@string/search_holiday"
            android:textAppearance="?attr/textAppearanceBody1"
            android:drawableEnd="@drawable/ic_search" />

    </com.google.android.material.textfield.TextInputLayout>

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/holidaysList"
        android:layout_width="0dp"
        android:layout_height="0dp"
        app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintTop_toBottomOf="@id/searchCountryHolidayInput"
        tools:itemCount="4"
        tools:listitem="@layout/item_holiday" />

    <include
        android:id="@+id/emptyState"
        layout="@layout/state_empty"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginEnd="8dp"
        android:layout_marginTop="16dp"
        android:visibility="gone"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="@id/guidelineEnd"
        app:layout_constraintStart_toStartOf="@id/guidelineStart"
        app:layout_constraintTop_toBottomOf="@+id/searchCountryHolidayInput" />

    <com.airbnb.lottie.LottieAnimationView
        android:id="@+id/loader"
        android:layout_width="70dp"
        android:layout_height="70dp"
        android:layout_marginHorizontal="16dp"
        android:layout_marginVertical="16dp"
        android:scaleType="centerInside"
        android:padding="-100dp"
        app:lottie_colorFilter="?colorPrimary"
        app:lottie_rawRes="@raw/loader"
        app:lottie_loop="true"
        app:lottie_autoPlay="true"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintBottom_toTopOf="@+id/loaderMessage" />

    <TextView
        android:id="@+id/loaderMessage"
        style="@style/MainTextAppearance"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_gravity="center_vertical"
        android:paddingHorizontal="32dp"
        android:text="@string/loading_country_holidays"
        android:gravity="center_horizontal"
        android:textSize="16sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="@+id/guidelineEnd"
        app:layout_constraintStart_toStartOf="@+id/guidelineStart"
        app:layout_constraintTop_toBottomOf="@id/searchCountryHolidayInput" />

    <androidx.constraintlayout.widget.Group
        android:id="@+id/loaderGroup"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:visibility="gone"
        app:constraint_referenced_ids="loader, loaderMessage" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guidelineStart"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintGuide_begin="24dp" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guidelineEnd"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintGuide_end="24dp" />

</androidx.constraintlayout.widget.ConstraintLayout>